update week 2 research

--- a/docs/research/R2.2-Notes.md
+++ b/docs/research/R2.2-Notes.md
@@ -1,1 +1,32 @@
+# Week 2 Research Notes
 
+## Topic: Unsplash API Integration for Dynamic Backgrounds
+
+- **Date**: May 16, 2025
+- **Overview**: This week, I explored the Unsplash API to add dynamic background images to my React portfolio. The goal was to create a more visually engaging landing experience by fetching high-quality photos based on predefined keywords. I also continued building toward the goals outlined in my 4-week portfolio enhancement roadmap.
+
+---
+
+## Key Insights
+
+### 1. **Unsplash API Setup & Authentication**
+- The [Unsplash Developers Platform](https://unsplash.com/developers) provides access to a vast library of free, high-resolution images.
+- To get started:
+  - Created an Unsplash developer account and registered an application.
+  - Retrieved an **Access Key** and stored it securely in the `.env` file:
+    ```env
+    VITE_UNSPLASH_ACCESS_KEY=your_access_key
+    ```
+  - Used `fetch()` to request a random image:
+    ```javascript
+    fetch(`https://api.unsplash.com/photos/random?query=technology&client_id=${import.meta.env.VITE_UNSPLASH_ACCESS_KEY}`)
+      .then(response => response.json())
+      .then(data => setImageUrl(data.urls.regular))
+      .catch(error => console.error('Image fetch failed:', error));
+    ```
+
+### 2. **React Integration with useEffect**
+- Used `useEffect()` to fetch the background image on component mount.
+- Stored the image URL using `useState()` and applied it with inline styles:
+  ```jsx
+  style={{ backgroundImage: `url(${imageUrl})` }}
