slight update to research

--- a/docs/research/R3.2-Notes.md
+++ b/docs/research/R3.2-Notes.md
@@ -23,10 +23,8 @@
   const projects = [
     {
       title: 'Weather App',
-      description: 'A real-time weather forecast app using OpenWeatherMap API.',
-      tech: ['React', 'Bootstrap', 'API'],
+      description: 'A real-time weather forecast app using OpenWeatherMap API.'
       github: 'https://github.com/username/weather-app',
-      demo: 'https://weather-app-demo.netlify.app',
     },
     // ...
   ];
